<resources>
    <string name="app_name">Pay Calculator</string>
    <string name="db_name">pay.db</string>
    <string name="__calculated">" - Calculated "</string>
    <string name="__current">" - CURRENT"</string>
    <string name="__for">"\n for "</string>
    <string name="__pay_summary">" - Pay Summary"</string>
    <string name="__summary">" - Summary"</string>
    <string name="__time_sheet">" - time sheet"</string>
    <string name="_0_hr">0 Hr</string>
    <string name="_15">15</string>
    <string name="_31">31</string>
    <string name="_6">6</string>
    <string name="_at_">\nAt:</string>
    <string name="_attaches_to_">"\nAttaches to "</string>
    <string name="_break">Break</string>
    <string name="_default">Default</string>
    <string name="_deleted_">  *Deleted*</string>
    <string name="_for_">" for : "</string>
    <string name="_for">" for "</string>
    <string name="_in_">" in "</string>
    <string name="_in_the_database">" in the database"</string>
    <string name="_on_">" on "</string>
    <string name="_to_">" to "</string>
    <string name="add_">" add "</string>
    <string name="add_a_definition">Add a definition</string>
    <string name="add_a_description_first">Add a description first</string>
    <string name="add_a_new_cut_off_date">* Add a new Cut Off date *</string>
    <string name="add_a_new_extra_frequency">* Add a new Extra Frequency *</string>
    <string name="add_a_new_extra_type">* Add a new Extra Type *</string>
    <string name="add_a_new_tax_type">Add a New tax Type</string>
    <string name="add_a_new_work_date">Add a new work date</string>
    <string name="add_a_one_time_extra">Add a one time extra</string>
    <string name="add_a_pay_rate">Add a pay rate</string>
    <string name="add_an_employer">* Add an employer *</string>
    <string name="add_an_extra_to_this_pay_period">Add an extra to this pay period</string>
    <string name="add_extra_type">Add Extra Type</string>
    <string name="add_job_spec_below">Add Job Spec below:</string>
    <string name="add_materials_used_below">Add Materials Used below</string>
    <string name="add_new_credit">Add new Credit</string>
    <string name="add_new_deductions">Add new Deductions</string>
    <string name="add_new_effective_date">* Add New Effective Date *</string>
    <string name="add_new_employer">* Add New Employer *</string>
    <string name="add_new_extra">* Add New Extra *</string>
    <string name="add_new_work_order">Add new work order</string>
    <string name="add_new">New</string>
    <string name="add_tax_rule">* Add Tax Rule *</string>
    <string name="add_time_to_work_order">Add time to work order</string>
    <string name="add_time">Add Time</string>
    <string name="add_work_performed_below">Add Work Performed below</string>
    <string name="add_work_performed_to_workorder_history">Add Work to Work Order History</string>
    <string name="add">Add</string>
    <string name="added_automatically">*Added Automatically.</string>
    <string name="added_manually">Added Manually</string>
    <string name="address">Address</string>
    <string name="all_the_work_dates_will_have_to_be_re_entered">All the work dates will have to be re-entered.</string>
    <string name="amount">Amount</string>
    <string name="an_exemption_is_indicated_but_no_amount_was_entered">An exemption is indicated but no amount was entered!</string>
    <string name="an_unknown_error_occurred_error_was">"An unknown error occurred. \n Error was: "</string>
    <string name="an_unknown_error_occurred">An unknown error occurred</string>
    <string name="an_upper_limit_is_indicated_but_no_amount_was_entered">An upper limit is indicated but no amount was entered!</string>
    <string name="applied">"Applied "</string>
    <string name="applies_to">Applies To</string>
    <string name="apply_this_to">Apply this to:</string>
    <string name="apply_to">Apply to:</string>
    <string name="are_you_sure_you_want_to_delete_wo">"Are you sure you want to delete wo "</string>
    <string name="are_you_sure_you_want_to_delete">"Are you sure you want to delete  "</string>
    <string name="area_optional">Area (optional)</string>
    <string name="area">Area</string>
    <string name="at_"> At: </string>
    <string name="attach_this_to">Attach this to:</string>
    <string name="attach_to">Attach To</string>
    <string name="attaches_to">"Attaches to "</string>
    <string name="base_on">Base on:</string>
    <string name="blank"> </string>
    <string name="by_default">by default</string>
    <string name="calculated">"Calculated "</string>
    <string name="cancel">Cancel</string>
    <string name="change_description">Change description</string>
    <string name="change_the_quantity">Change the quantity</string>
    <string name="check_if_this_is_a_credit_n_otherwise_it_will_be_a_deduction">Check if this is a credit\n otherwise it will be a deduction</string>
    <string name="check_if_this_is_a_default_n_otherwise_it_will_not_automatically_apply">Check if this is a default\n otherwise it will not automatically\n apply</string>
    <string name="check_if_this_is_a_fixed_amount">Check if this is a fixed amount\n otherwise it will be a percentage</string>
    <string name="check_to_see_if_this_material_has_already_been_added_">check to see if this material has already been added. Fix the error and try again.</string>
    <string name="check_to_see_if_this_work_was_already_entered_">Check to see if this work was already entered for the area noted. If so please correct the error before going on.</string>
    <string name="child_work_performed">Child Work Performed</string>
    <string name="choose_a_date_to_project_forward_to">Choose a date to project forward to</string>
    <string name="choose_a_tax_type">Choose a Tax Type</string>
    <string name="choose_a_universal_effective_date">Choose a Universal Effective Date</string>
    <string name="choose_a_valid_material">Choose a valid material!</string>
    <string name="choose_a_work_date">Choose a work date</string>
    <string name="choose_a_work_order">Choose a work order</string>
    <string name="choose_an_action_for">"Choose an action for: "</string>
    <string name="choose_an_action">Choose an Action</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_extra_frequency_types">Choose Extra Frequency Types</string>
    <string name="choose_first_check_date">Choose the first pay date</string>
    <string name="choose_merge_option_for">Choose merge option for %1$s</string>
    <string name="choose_next_steps_for">"Choose next steps for "</string>
    <string name="choose_option_for_wo">"Choose option for wo "</string>
    <string name="choose_option_for">"Choose option for "</string>
    <string name="choose_the_first_date">Choose the first check date</string>
    <string name="choose_the_next_step">Choose the next step</string>
    <string name="choose_the_other_description_to_merge">Choose the other description to merge</string>
    <string name="choose_when_this_wage_goes_into_effect">Choose when this wage goes into effect</string>
    <string name="choose_when_this_will_take_effect">Choose when this will take effect</string>
    <string name="choose">"Choose "</string>
    <string name="click_to_change_date">Click to change date</string>
    <string name="confirm_adding_duplicate_extra__">"Confirm adding duplicate Extra:  "</string>
    <string name="confirm_delete_pay_period">Confirm Delete Pay Period</string>
    <string name="continue_">Continue</string>
    <string name="continue_to_update">Continue to update?</string>
    <string name="cost">Cost</string>
    <string name="create_work_order_">"Create Work Order: "</string>
    <string name="create">Create</string>
    <string name="credit">credit</string>
    <string name="credits">Credits</string>
    <string name="current_wage">Current Wage</string>
    <string name="cut_off_date">Cut off date</string>
    <string name="cutoff_date_">"Cutoff Date: "</string>
    <string name="date_">" Date: "</string>
    <string name="date_and_employer_info">Date and Employer Info</string>
    <string name="day_of_week">Day of Week</string>
    <string name="days">Days</string>
    <string name="dbl_ot_">"Dbl Ot: "</string>
    <string name="dbl_ot_hrs">" Dbl Ot hrs"</string>
    <string name="dbl_ot">Dbl Ot</string>
    <string name="dblot_hrs_">"DblOt Hrs: "</string>
    <string name="debit">Debit</string>
    <string name="deduct">"Deduct "</string>
    <string name="deduction">deduction</string>
    <string name="deductions">Deductions</string>
    <string name="defaults_to_fixed">Defaults to fixed amount</string>
    <string name="defaults_to_percentage">Defaults to percentage</string>
    <string name="delete_this_date">Delete this date</string>
    <string name="delete_this_item">Delete this Item</string>
    <string name="delete">DELETE</string>
    <string name="deleted">* DELETED *</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="done">Done</string>
    <string name="double_overtime">Double Overtime</string>
    <string name="edit_">Edit:</string>
    <string name="edit_area_description_of_">"Edit area description of "</string>
    <string name="edit_description">Edit description</string>
    <string name="edit_job_spec">Edit Job Spec</string>
    <string name="edit_pay_rate_for">"Edit pay rate for "</string>
    <string name="edit_the_job_spec_description_in_the_work_order">Edit the Job Spec description in the Work Order</string>
    <string name="edit_the_job_spec_for_wo_">"Edit the Job Spec for WO: "</string>
    <string name="edit_the_material_in_the_database">Edit the material in the database</string>
    <string name="edit_the_work_performed_description_in_the_history">Edit the work performed description in the history</string>
    <string name="edit_the_work_performed">Edit the Work Performed</string>
    <string name="edit_this_date">Edit this date</string>
    <string name="edit_this_item">Edit this Item</string>
    <string name="edit_times">edit\ntimes</string>
    <string name="edit_work_description_of_">"Edit Work description of "</string>
    <string name="edit_work_description_of">"Edit Work description of "</string>
    <string name="edit">EDIT</string>
    <string name="effective_date">Effective Date</string>
    <string name="employer_">" Employer: "</string>
    <string name="employer_name">Employer Name</string>
    <string name="employers">Employers</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_extra_name">Enter Extra Name</string>
    <string name="extra_items">Extra Items</string>
    <string name="extra_name_description">Extra Name/Description</string>
    <string name="extra_type">Extra Type</string>
    <string name="history">History</string>
    <string name="hours">Hours</string>
    <string name="material">Material</string>
    <string name="merge">merge</string>
    <string name="overtime">Overtime</string>
    <string name="pay_details">Pay Details</string>
    <string name="pay_extras">Pay Extras</string>
    <string name="please_note_that_this_will_affect_all_work_orders">* Please note that this will affect all work orders and histories that use this description.</string>
    <string name="price">Price</string>
    <string name="rate_or_value">Rate or Value</string>
    <string name="summary">Summary</string>
    <string name="taxes">Taxes</string>
    <string name="text_zeros">0000</string>
    <string name="time_sheet">Time Sheet</string>
    <string name="update">"Update"</string>
    <string name="work_date">Work Date </string>
    <string name="work_order_number">Work Order Number</string>
    <string name="zero_dollars">$0.00</string>
    <string name="zero_percent">0.0%</string>
</resources>