<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/timeSheetFragment"
        android:icon="@drawable/ic_time_sheet"
        android:title="@string/time_sheet" />
    <item
        android:id="@+id/payDetailFragmentNew"
        android:icon="@drawable/ic_check_foreground"
        android:title="@string/pay_details" />
    <item
        android:id="@+id/employerFragment"
        android:icon="@drawable/ic_employer_foreground"
        android:title="@string/employers" />
    <item
        android:id="@+id/taxRulesFragment"
        android:icon="@drawable/ic_tax"
        android:title="@string/taxes" />
    <item
        android:id="@+id/employerExtraDefinitionsFragment"
        android:icon="@drawable/ic_extras"
        android:title="@string/pay_extras" />

</menu>