<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chActive"
            android:layout_width="@dimen/minimum_touch_height"
            android:layout_height="@dimen/minimum_touch_height" />

        <TextView
            android:id="@+id/tvExtraDescription"
            android:layout_width="@dimen/text_box_medium"
            android:layout_height="wrap_content"
            android:text="@string/extra_type"
            android:textColor="@color/black"
            android:textSize="@dimen/label_text_size" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/deep_red"
            android:text="@string/edit" />

        <TextView
            android:id="@+id/tvExtraTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:text="@string/zero_dollars"
            android:textColor="@color/black"
            android:textSize="@dimen/label_text_size" />

    </LinearLayout>
</layout>