<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.workorder.WorkOrderSummaryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lblWorkOrderNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_order_number"
            android:textColor="@color/black"
            android:textSize="@dimen/label_text_size"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/etWorkOrderNumber"
            app:layout_constraintEnd_toStartOf="@id/etWorkOrderNumber"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etWorkOrderNumber"
            android:layout_width="@dimen/text_box_wide"
            android:layout_height="@dimen/minimum_touch_height"
            android:hint="@string/text_zeros"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/lblWorkOrderNumber"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/lblAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="@dimen/label_text_size"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/etAddress"
            app:layout_constraintEnd_toStartOf="@id/etAddress"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="@dimen/layout_width_wide"
            android:layout_height="@dimen/minimum_touch_height"
            android:hint="@string/enter_address"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/lblAddress"
            app:layout_constraintTop_toBottomOf="@id/etWorkOrderNumber" />

        <TextView
            android:id="@+id/lblDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="@dimen/label_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAddress" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_15dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/enter_description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:maxHeight="@dimen/layout_width_wide"
            android:minHeight="@dimen/minimum_touch_height"
            android:textColor="@color/black"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblDescription"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/lblHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textColor="@color/black"
            android:textSize="@dimen/label_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDescription" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblHistory" />

        <TextView
            android:id="@+id/tvSummary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_15dp"
            android:text="@string/summary"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvHistory" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_25dp"
            android:layout_marginBottom="@dimen/dimen_25dp"
            android:backgroundTint="@color/dark_green"
            android:contentDescription="@string/add_new"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>