<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.workorder.materials.MaterialUpdateFragment">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_"
            android:textColor="@color/black"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etMaterial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:hint="@string/material"
            android:importantForAutofill="no"
            android:inputType="text|textCapSentences"
            android:minHeight="@dimen/minimum_touch_height"
            android:paddingStart="@dimen/dimen_50dp"
            android:paddingEnd="@dimen/dimen_50dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/lblPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintBaseline_toBaselineOf="@id/etPrice"
            app:layout_constraintEnd_toStartOf="@id/etPrice"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/zero_dollars"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minWidth="@dimen/text_box_narrow"
            android:minHeight="@dimen/minimum_touch_height"
            android:selectAllOnFocus="true"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/lblCost"
            app:layout_constraintStart_toEndOf="@id/lblPrice"
            app:layout_constraintTop_toBottomOf="@id/etMaterial"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/lblCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:textColor="@color/black"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintBaseline_toBaselineOf="@id/etPrice"
            app:layout_constraintEnd_toStartOf="@id/etCost"
            app:layout_constraintStart_toEndOf="@id/etPrice" />

        <EditText
            android:id="@+id/etCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/zero_dollars"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minWidth="@dimen/text_box_narrow"
            android:minHeight="@dimen/minimum_touch_height"
            android:selectAllOnFocus="true"
            android:textColor="@color/black"
            app:layout_constraintBaseline_toBaselineOf="@id/etPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/lblCost" />

        <TextView
            android:id="@+id/tvDisclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingStart="@dimen/dimen_50dp"
            android:paddingEnd="@dimen/dimen_50dp"
            android:text="@string/please_note_that_this_will_affect_all_work_orders"
            android:textColor="@color/black"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPrice" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:backgroundTint="@color/green"
            android:text="@string/update"
            app:layout_constraintEnd_toStartOf="@id/btnCancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDisclaimer"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:backgroundTint="@color/green"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnUpdate"
            app:layout_constraintTop_toBottomOf="@id/tvDisclaimer"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnMerge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/deep_red"
            android:text="@string/merge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnUpdate" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>