<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvWorkDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:text="@string/work_date"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:text="@string/hours"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/tvOt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:text="@string/overtime"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/tvStat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:text="@string/stat_hours"
                android:textSize="@dimen/text_size_medium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvExtras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extra_items"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>
    </LinearLayout>
</layout>